<resources>
    <string name="app_name">AnyPizzaApp</string>
    <string name="title_menu">Меню</string>
    <string name="title_profile">Профиль</string>
    <string name="title_about">О нас</string>
    <string name="title_cart">Корзина</string>
    <string name="pizzas">Пиццы</string>
    <string name="snacks">Закуски</string>
    <string name="drinks">Напитки</string>
    <string name="desserts">Десерты</string>
    <string name="item_image">Item Image</string>
    <string name="password">Password</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="signedOut">Вход не выполнен</string>
    <string name="email">Email</string>
    <string name="verifyEmail">Подтвердите email</string>
    <string name="reload">reload</string>
    <string name="Authorisation">Авторизация</string>
    <string name="title_activity_map_fragment">Map</string>
</resources>
