<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">


    <fragment
        android:id="@+id/navigation_menu"
        android:name="by.akelian.dp.anyPizzaApp.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_menu_pizza"
        android:name="by.akelian.dp.anyPizzaApp.ui.menu.pizzas.PizzasFragment"
        android:label="Pizza"
        tools:layout="@layout/fragment_pizzas_menu" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="by.akelian.dp.anyPizzaApp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="by.akelian.dp.anyPizzaApp.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="by.akelian.dp.anyPizzaApp.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />


</navigation>
